--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,7 @@ readme = "README.md"
 
 [tool.poetry.dependencies]
 python = "^3.10"
+pymongo = {extras = ["srv"], version = "^4.6.0"}
 
 
 [build-system]
