--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,11 @@ python = "^3.10"
 pymongo = {extras = ["srv"], version = "^4.6.0"}
 
 
+[tool.poetry.group.dev.dependencies]
+requests = "^2.31.0"
+flake8 = "^6.1.0"
+isort = "^5.12.0"
+
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
