--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,7 @@ readme = "README.md"
 [tool.poetry.dependencies]
 python = "^3.10"
 pymongo = {extras = ["srv"], version = "^4.6.0"}
+requests = "^2.31.0"
 
 
 [tool.poetry.group.dev.dependencies]
