--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,15 +6,16 @@ authors = ["Sergei Demchenko <hb13718@gmail.com>"]
 readme = "README.md"
 
 [tool.poetry.dependencies]
-python = "^3.10"
+python = "^3.8.1"
 pymongo = {extras = ["srv"], version = "^4.6.0"}
 requests = "^2.31.0"
 
 
 [tool.poetry.group.dev.dependencies]
-requests = "^2.31.0"
 flake8 = "^6.1.0"
 isort = "^5.12.0"
+pytest = "^7.4.3"
+pytest-cov = "^4.1.0"
 
 [build-system]
 requires = ["poetry-core"]
