--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,21 @@
 certifi==2023.7.22
 charset-normalizer==3.3.2
+colorama==0.4.6
+coverage[toml]==7.3.2
+dnspython==2.4.2
+exceptiongroup==1.1.3
+flake8==6.1.0
 idna==3.4
+iniconfig==2.0.0
+isort==5.12.0
+mccabe==0.7.0
+packaging==23.2
+pluggy==1.3.0
+pycodestyle==2.11.1
+pyflakes==3.1.0
 pymongo[srv]==4.6.0
+pytest-cov==4.1.0
+pytest==7.4.3
 requests==2.31.0
+tomli==2.0.1
 urllib3==2.1.0
